wifi_learn/build/log/idf_py_stdout_output_30717
[1/12] Performing build step for 'bootloader'
[1/1] cd /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/build/bootloader/esp-idf/esptool_py && /Users/hanyi02/.espressif/python_env/idf5.1_py3.9_env/bin/python /Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/build/bootloader/bootloader.bin
Bootloader binary size 0x6790 bytes. 0x870 bytes (8%) free.
[2/10] Building C object esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj
FAILED: esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj 
/Users/hanyi02/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-4124-gbb9200acec\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/build/config -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/components/wifi_connect/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/newlib/platform_include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/freertos/esp_additions/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/heap/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/log/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/soc/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/hal/platform_port/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_rom/esp32 -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_common/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/port/soc -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_system/port/include/private -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/xtensa/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/xtensa/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include/apps -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/lwip/src/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/freertos/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_wifi/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_event/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_phy/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_phy/esp32/include -I/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn=. -fmacro-prefix-map=/Users/hanyi02/Documents/My_Project/MCU/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj -MF esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj.d -o esp-idf/wifi_connect/CMakeFiles/__idf_wifi_connect.dir/wifi_connect.c.obj -c /Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/components/wifi_connect/wifi_connect.c
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/components/wifi_connect/wifi_connect.c: In function 'wifi_connect':
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/components/wifi_connect/wifi_connect.c:34:39: error: 'ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD' undeclared (first use in this function)
   34 |                 .threshold.authmode = ESP_WIFI_SCAN_AUTH_MODE_THRESHOLD,
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/hanyi02/Documents/My_Project/MCU/esp/esp32_learn/wifi_learn/components/wifi_connect/wifi_connect.c:34:39: note: each undeclared identifier is reported only once for each function it appears in
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi_learn.c.obj
ninja: build stopped: subcommand failed.
